refactor: implementa swagger openapi specs
