# controllers/cep/cep_controller.go
@@ -3,20 +3,13 @@ package cep_controller
 import (
 	"cep-gin-clean-arch/internal/entity"
 	"cep-gin-clean-arch/internal/usecase"
+	"cep-gin-clean-arch/models"
 	"cep-gin-clean-arch/utils"
 	"fmt"
 
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary      Busca um CEP
-// @Description  Busca um CEP informado como parâmetro em um banco de dados mackado
-// @Tags         cep
-// @Accept       json
-// @Produce      json
-// @Param        cep   path      string  true  "CEP"
-// @Success      200  {object}  usecase.BuscarCepOutputDTO
-// @Router       /cep/{cep} [get]
 type CEPWebHandler struct {
 	CEPRepository entity.CEPRepositoryInterface
 }
@@ -27,6 +20,16 @@ func NewBuscarCEPHandler(buscarCEPRepository entity.CEPRepositoryInterface) *CEP
 	}
 }
 
+// @Summary      Busca um CEP em um repositório
+// @Description  Busca um CEP em um repositório
+// @Tags         CEP
+// @Accept       json
+// @Produce      json
+// @Param        cep   path      string  true  "CEP"
+// @Success      200  {object}  usecase.BuscarCepOutputDTO
+// @Success      400  {object}  models.ErrorResponse
+// @Router       /cep/{cep} [get]
+// @security 	 BasicAuth
 func (h *CEPWebHandler) BuscarCEP(c *gin.Context) {
 
 	cepParam := c.Param("cep")
@@ -34,9 +37,11 @@ func (h *CEPWebHandler) BuscarCEP(c *gin.Context) {
 	err := cep.IsValidCep(cep.Cep)
 	if err != nil {
 		utils.GravarErroNoSentry(err, c)
-		c.AbortWithStatusJSON(400, gin.H{
-			"error":         err.Error(),
-			"Cep informado": cep.Cep})
+		errorResponse := models.ErrorResponse{
+			Error:        err.Error(),
+			CepInformado: cep.Cep,
+		}
+		c.JSON(400, errorResponse)
 		return
 	}
 
@@ -45,9 +50,11 @@ func (h *CEPWebHandler) BuscarCEP(c *gin.Context) {
 	if err != nil {
 		fmt.Println(err.Error())
 		utils.GravarErroNoSentry(err, c)
-		c.AbortWithStatusJSON(400, gin.H{
-			"error":         err.Error(),
-			"Cep informado": cep.Cep})
+		errorResponse := models.ErrorResponse{
+			Error:        err.Error(),
+			CepInformado: cep.Cep,
+		}
+		c.JSON(400, errorResponse)
 		return
 	}
 
