# controllers/healthCheck/health_check.go
@@ -1,4 +1,4 @@
-package healthcheck_controlle
+package healthcheck_controller
 
 import (
 	"cep-gin-clean-arch/models"
@@ -11,6 +11,14 @@ const (
 	Down = "down"
 )
 
+// @Summary      Verifica a saúde da API.
+// @Description  Verifica a saúde da API. Retornando se a mesma está no ar.
+// @Tags         Health Check
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  models.HealthCheck
+// @Router       /health-check [get]
+// @security 	 BasicAuth
 func HealthCheck() gin.HandlerFunc {
 	return func(c *gin.Context) {
 
